--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<button onclick="buyCvt()">Buy 1 Cultivator for $<span id="cvtprice">20.00</span>.</button>
 					<button onclick="upCvt()">Upgrade Cultivator for $<span id="upcvtprice">2.00e4</span>.</button>
 					<br><br>
-					<b>You need at least one picked plant for cultivators to work.</b>
+					<b>You need at least one plant in your inventory.</b>
 				</div>
 				<br><hr><br>
 				<div id="Bees" style="width: 90%; visibility: hidden;">
