--- a/index.html
+++ b/index.html
@@ -11,61 +11,96 @@
 		<script defer src="javascripts/saving.js" charset="utf-8" type="text/javascript"></script>
 		<script defer src="javascripts/loading.js" charset="utf-8" type="text/javascript"></script>
 		<script defer src="javascripts/core/very core/cultivator.js" charset="utf-8" type="text/javascript"></script>
+		<script defer src="javascripts/core/very core/hive.js" charset="utf-8" type="text/javascript"></script>
 		<script defer src="javascripts/core/very core/bee.js" charset="utf-8" type="text/javascript"></script>
 		<script defer src="javascripts/core/marketing.js" charset="utf-8" type="text/javascript"></script>
+		<script defer src="javascripts/core/automator.js" charset="utf-8" type="text/javascript"></script>
 		<script defer src="javascripts/core/ui.js" charset="utf-8" type="text/javascript"></script>
-		<script defer src="javascripts/core/price_fluctuate.js" charset="utf-8" type="text/javascript"></script>
 		<link rel="stylesheet" type="text/css" href="themes/Defaults.css"/>
 	</head>
 	<body>
-		<h2>Welcome to growth simulator-The marketing update</h2>
+		<h2>Welcome to growth simulator-The automator update</h2>
 		<a href="https://discord.gg/DVy4XjB">Discord</a>
 		<br><br>
 		<button onclick="tab('Plants')">Plants</button>
-		<button onclick="invert()" style="position: absolute; right: 0;">Toggle Dark Mode</button>
+		<div style="position: absolute; right: 0; transform: translateY(-100%);">
+			<button onclick="save()" class="optionsbtn">Save</button><button onclick="togglesave()" class="optionsbtn" id="autosave?">Autosave: ON</button>
+			<br>
+			<button onclick="expo()" class="optionsbtn">Export</button><button onclick="impo()" class="optionsbtn">Import</button>
+			<br>
+			<button onclick="reset()" class="optionsbtn">Reset the game</button><button onclick="invert()" class="optionsbtn">Toggle Theme</button>
+		</div>
 		<hr>
 		You have <span id="plants">0</span> Plants in your inventory.
-		<br><br>
+		<br>
 		There are <span id="plantsUn">200</span> Plants in the field.
 		<br><br>
 		<div id="Plants" class="tab" style="display: flex; align-items: flex-start;">
 			<div id="Plants1" style="width: 50%;">
 				<div id="Main" style="width: 80%;">
 					<button onclick="unplant()">Pick 1 plant from the field.</button>
-					<button id="sellplant" onclick="sell()" style="visibility: hidden;">Sell 1 plant</button>
-					<br><br>
-					<span id="moneys" style="visibility: hidden;">You have $<span id="moneycount">0.00</span></span>
-					<br><br>
-					<span id="priceSpan">Price of a plant: $<span id="price">0.50</span></span>
+					<button id="sellplant" onclick="sell()" style="display: none;">Sell 1 plant for  $<span id="price">0.50</span></button>
+					<br>
+					<p id="moneys" style="display: none;">You have $<span id="moneycount">0.00</span></p>
+					<br>
+					<div id="Bees" style="width: 90%; display: none;">
+						You have <span id="bees">0</span> honeybees.
+						<br>
+						You have <span id="honey">0</span> honey.
+						<br><br>
+						<button id="sellhoney" onclick="sellHoney()">Sell 100 honey for $<span id="honeyprice">2.50</span></button>
+						<br><br>
+						<b>Tip: leave some plants unpicked so you can attract more bees and make more honey.</b>
+					</div>
 				</div>
 				<br><hr><br>
-				<div id="Pots" style="width: 90%; visibility: hidden;">
+				<h3 id="tbuPots">Unlocked at $40.00</h3>
+				<div id="Pots" style="width: 90%; display: none;">
 					You have <span id="cvts">0</span> cultivators.  Your cultivators are at level <span id="cvtlevel">0</span>.
 					<br><br>
 					<button onclick="buyCvt()">Buy 1 Cultivator for $<span id="cvtprice">20.00</span>.</button>
 					<button onclick="upCvt()">Upgrade Cultivator for $<span id="upcvtprice">2.00e4</span>.</button>
 					<br><br>
-					<b>You need at least one plant in your inventory.</b>
+					<b>Cultivators make plants in your inventory regrow. You need at least one plant in your inventory for them to work.</b>
 				</div>
-				<br><hr><br>
-				<div id="Bees" style="width: 90%; visibility: hidden;">
-					You have <span id="bees">0</span> honeybees.
+				<br>
+				<div id="Hives" style="width: 90%; display: block;">
+					You have <span id="hives">0</span> hives, producing <span id="honeycombpersec">0</span> honeycombs per second.
 					<br>
-					You have <span id="honey">0</span> honey.
+					Your <span id="honeycombamt">0</span> honeycombs are boosting bee production by x<span id="combeffect">1.00</span>
 					<br><br>
-					<button id="sellhoney" onclick="sellHoney()">Sell 1 honey</button>
-					<br><br>
-					Price of 1 honey: $<span id="honeyprice">2.50</span>
-					<br><br>
-					<b>Tip: leave some plants unpicked so you can attract more bees and make more honey.</b>
+					<button onclick="buyHive()">Buy 1 Beehive for $<span id="hiveprice">20.00</span>.</button>
 				</div>
 			</div>
-			<div id="Plants2" style="width: 50%; visibility: hidden;">
-				Marketing level: <span id="marketingLevel">0</span>
-				<button onclick="upmarketing()">Upgrade Marketing for $<span id="marketingPrice">0.00</span></button>
-				<br><hr><br>
+			<div style="width: 50%;"><h3 id="tbuAuto">Unlocked at $500.00</h3>
+				<div id="Plants2" style="display: none;">
+					Marketing level: <span id="marketingLevel">0</span>
+					<button onclick="upmarketing()">Upgrade Marketing for $<span id="marketingPrice">0.00</span></button>
+					<br><hr><br>
+					<b>Automators</b>
+					<br>
+					<button onclick="buyAuto('sellPlant', new Decimal(500))" id="buyAutomatorSellPlant">Unlock Automator for selling plants for $500.00</button>
+					<div class="automatorDiv" id="plantAuto" style="display: none;">
+						Sell <input type="number" min="0" max="100" value="0" id="plantinput" style="width: 10em" onchange="updatePlantAuto()"/>% of plants produced
+					</div>
+					<button onclick="buyAuto('sellHoney', new Decimal(1e5))" id="buyAutomatorSellHoney">Unlock Automator for selling honey for $1.00e5</button>
+					<div class="automatorDiv" id="honeyAuto" style="display: none;">
+						Sell <input type="number" min="0" max="100" value="0" id="honeyinput" style="width: 10em" onchange="updateHoneyAuto()"/>% of honey produced 
+					</div>
+					<button onclick="buyAuto('buycontainer', new Decimal(1e8))" id="buyAutomatorSellCvt">Unlock Automator for buying cultivators and hives for $1.00e8 (requires 200 cultivators and hives)</button>
+					<button onclick="buyAuto('buycontainerup', new Decimal(1e10))" id="buyAutomatorSellCvtup">Unlock Automator for buying cultivator upgrades for $1.00e10</button>
+					<button onclick="buyAuto('buymarketing', new Decimal(1e12))" id="buyAutomatorSellMark">Unlock Automator for buying marketing for $1.00e12</button>
+					<div class="automatorDiv" id="autobuydiv" style="display: none;">
+						<span id="cvtautospan" style="display: none;">Cultivator autobuyer: <button id="buycontainer" onclick="toggleAuto('buycontainer')">OFF</button></span>
+						<br>
+						<span id="cvtautoupspan" style="display: none;">Cultivator Upgrade autobuyer: <button id="buycontainerup" onclick="toggleAuto('buycontainerup')">OFF</button></span>
+						<br>
+						<span id="markautospan" style="display: none;">Marketing autobuyer: <button id="buymarketing" onclick="toggleAuto('buymarketing')">OFF</button></span>
+					</div>
+				</div>
 			</div>
 		</div>
-		<a href="https://bit.ly/2Bru1VR" title="https://bit.ly/2Bru1VR"><s style="position: absolute; bottom: 0px; left: 0px; font-family: sans-serif; font-size: 10px">:.|:;</s></a>
+		<a href="https://bit.ly/2Bru1VR" title="Is this loss?" target="newtab"><s style="position: fixed; top: 0px; right: 0px; font-family: sans-serif; font-size: 7px">:.|:;</s></a>
+		<textarea id="savetext" style="display: none;"></textarea>
 	</body>
 </html>
