--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Growth</title>
 		<link rel="icon" type="image/png" href="icon.png"/>
 		<script defer src="javascripts/break_infinity.js" charset="utf-8" type="text/javascript"></script>
-		<!--script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script!-->
+		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		<script defer src="javascripts/core/very core/initGame.js" charset="utf-8" type="text/javascript"></script>
 		<script defer src="javascripts/notation.js" charset="utf-8" type="text/javascript"></script>
 		<script defer src="javascripts/core/very core/planting.js" charset="utf-8" type="text/javascript"></script>
@@ -38,8 +38,9 @@
 		<div id="Plants" class="tab" style="display: flex; align-items: flex-start;">
 			<div id="Plants1" style="width: 50%;">
 				<div id="Main" style="width: 80%;">
-					<button onclick="unplant()">Pick 1 plant from the field.</button>
-					<button id="sellplant" onclick="sell()" style="display: none;">Sell 1 plant for  $<span id="price">0.50</span></button>
+					<button onclick="unplant()">Pick 1 plant.</button>
+					<button id="sellplant" onclick="sell()" style="display: none;">Sell 1 for $<span id="price">1.00</span></button>
+					<button id="sell10plant" onclick="sell10()" style="display: none;">Sell 10 for $<span id="priceof10">10.00</span></button>
 					<br>
 					<p id="moneys" style="display: none;">You have $<span id="moneycount">0.00</span></p>
 					<br>
@@ -49,8 +50,7 @@
 						You have <span id="honey">0</span> honey.
 						<br><br>
 						<button id="sellhoney" onclick="sellHoney()">Sell 100 honey for $<span id="honeyprice">2.50</span></button>
-						<br><br>
-						<b>Tip: leave some plants unpicked so you can attract more bees and make more honey.</b>
+						<button id="sell10honey" onclick="sell10Honey()">Sell 1000 honey for $<span id="10honeyprice">25.00</span></button>
 					</div>
 				</div>
 				<br><hr><br>
@@ -60,8 +60,6 @@
 					<br><br>
 					<button onclick="buyCvt()">Buy 1 Cultivator for $<span id="cvtprice">20.00</span>.</button>
 					<button onclick="upCvt()">Upgrade Cultivator for $<span id="upcvtprice">2.00e4</span>.</button>
-					<br><br>
-					<b>Cultivators make plants in your inventory regrow. You need at least one plant in your inventory for them to work.</b>
 				</div>
 				<br>
 				<div id="Hives" style="width: 90%; display: block;">
@@ -87,7 +85,7 @@
 					<div class="automatorDiv" id="honeyAuto" style="display: none;">
 						Sell <input type="number" min="0" max="100" value="0" id="honeyinput" style="width: 10em" onchange="updateHoneyAuto()"/>% of honey produced 
 					</div>
-					<button onclick="buyAuto('buycontainer', new Decimal(1e8))" id="buyAutomatorSellCvt">Unlock Automator for buying cultivators and hives for $1.00e8 (requires 200 cultivators and hives)</button>
+					<button onclick="buyAuto('buycontainer', new Decimal(1e8))" id="buyAutomatorSellCvt">Unlock Automator for buying cultivators and hives for $1.00e8</button>
 					<button onclick="buyAuto('buycontainerup', new Decimal(1e10))" id="buyAutomatorSellCvtup">Unlock Automator for buying cultivator upgrades for $1.00e10</button>
 					<button onclick="buyAuto('buymarketing', new Decimal(1e12))" id="buyAutomatorSellMark">Unlock Automator for buying marketing for $1.00e12</button>
 					<div class="automatorDiv" id="autobuydiv" style="display: none;">
